a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shivan_sahib/string_mult_string.min
var x : string;
var y : string;
var z : string;

read x;
read y;
z = x * y;


